Bug 1661157 part 1 - Wrap nsPrinterCUPS::mPrinterInfo in a data mutex r=emilio

This may also help with the crashes in bug 1663410 and bug 1663412

Differential Revision: https://phabricator.services.mozilla.com/D89654